# Risk-Aware-Return-to-Home-Policy-for-UAVs-under-Battery-Uncertainty-and-Wind-Disturbances

./: .gitignore  CITATION.cff  Dockerfile  README.md  README_EL.md  RUNNING.md  Readmegreek.md  index.html  pyproject.toml  requirements.txt  run_experiment.py  uav_rth_simulator.html
.github/workflows/: research-ci.yml
configs/: default_experiment.json
configs/experiments/: aggressive_tau.yaml  conservative_tau.yaml  crosswind.yaml  gust.yaml  headwind.yaml  high_battery_uncertainty.yaml  high_wind_variance.yaml  long_distance.yaml  low_battery_uncertainty.yaml  nominal.yaml  tailwind.yaml
configs/platform/: default_scenario.json  world_urban_mission.json
docs/: ACADEMIC_COMPLETION.md  ARCHITECTURE.md  BATTERY_MODEL.md  CLI_BENCHMARK_EXPORTS.md  CONTRIBUTING_RESEARCH.md  EVALUATION_MATRIX.md  EVALUATION_PROTOCOL.md  EXPERIMENTAL_PROTOCOL.md  EXPERIMENTAL_QUESTIONS.md  EXPERIMENTS.md  INSTALLATION_EL.md  INTERACTIVE_SIMULATOR_ROADMAP.md  MATHEMATICAL_FORMULATION.md  MONTE_CARLO_RISK_ESTIMATION.md  MULTIROTOR_ENERGY_MODEL.md  PHD_RESEARCH_PROPOSAL.md  PLATFORM_PLOTS.md  PLATFORM_RUNNER.md  PLATFORM_UPGRADE_V2.md  PROJECT_REPORT_EL.md  PUBLICATION_PLAN.md  REPRODUCIBILITY.md  REPRODUCIBILITY_PROTOCOL.md  REPRODUCIBILITY_ZURICH_POLISH.md  RESEARCH_OVERVIEW.md  ROADMAP.md  SYSTEM_ARCHITECTURE.md  THEORETICAL_FRAMEWORK.md  WIND_MODEL.md
docs/reports/: ENGINEERING_REPORT.md  REPRODUCIBILITY_REPORT.md  SCIENTIFIC_REPORT.md
experiments/: README.md  run_ablation_studies.py  run_battery_aging_study.py  run_dynamic_wind_exposure.py  run_monte_carlo_experiments.py  run_wind_gust_study.py
logs/: run_20260112_153350.csv
paper/: abstract.md  contributions.md  future_work.md
risk_rth/: config.py  metrics.py  models.py  simulate.py
risk_rth_platform/: __init__.py  benchmark.py  cli.py  config.py  eval_utils.py  models.py  simulator.py  statistics.py
scripts/: analyze_runs.py  make_demo_gif.py  plot_platform_trials.py  run_2d_mission_simulation.py  run_all_experiments.py  run_batch.sh  run_experiment.py  run_platform_benchmark.py  run_research_platform.py
src/uav_planner/: package.xml  setup.py
src/uav_planner/uav_planner/: planner_node.py
src/uav_sim/: package.xml  setup.py
src/uav_sim/uav_sim/: sim_node.py
tests/: test_benchmark_runner_basic.py  test_config.py  test_core_models.py  test_dynamic_wind_experiment.py  test_gif_pipeline.py  test_metrics.py  test_multirotor_energy.py  test_policy.py  test_statistics.py  test_stats_bounds.py  test_wind_exposure.py  test_wind_models.py
website/: package.json
(+68 files in other folders)
