[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-aware-uav-rth"
version = "0.2.0"
description = "Risk-aware UAV return-to-home simulation under battery uncertainty and wind disturbances."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Panagiota Grosdouli" }
]
dependencies = [
  "numpy<2",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "pillow>=10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0",
  "pre-commit>=3.0"
]

[tool.setuptools.packages.find]
include = ["risk_rth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
